--- a/layout/header.html
+++ b/layout/header.html
@@ -6,6 +6,7 @@ Content-Type:text/html
     <meta charset="utf-8">
     <title>けいじばん</title>
     <link rel="stylesheet" href="assets/style.css">
+    <script src="assets/bbs.js"></script>
   </head>
   <body>
     <div id="container">
