--- a/layout/footer.html
+++ b/layout/footer.html
@@ -1,7 +1,7 @@
         </ul>
       </div>
       <div id="footer">
-        <form action="bbs.cgi" method="post">
+        <form action="bbs.cgi" method="post" name="post">
           <input type="hidden" name="icon">
           <input type="hidden" name="name">
           <button type="button" id="select_icon"></button>
