--- a/assets/style.css
+++ b/assets/style.css
@@ -28,6 +28,17 @@ body {
   text-align: center;
 }
 
+#header #user_info {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  height: 60px;
+  width: 64px;
+  border: 0;
+  vertical-align: middle;
+  background: url(user.gif);
+}
+
 #contents {
   padding: 98px 20px 90px;
   background: #fff url(contents_back.jpg) repeat-y fixed center top;
@@ -86,6 +97,7 @@ body {
 
 .fukidashi .value {
   font-size: 30px;
+  word-break: break-all;
   padding: 0 30px 0 40px;
   background: url(fukidashi_middle.png) repeat-y;
 }
