--- a/layout/header.html
+++ b/layout/header.html
@@ -6,12 +6,14 @@ Content-Type:text/html
     <meta charset="utf-8">
     <title>けいじばん</title>
     <link rel="stylesheet" href="assets/style.css">
+    <script src="assets/cookie.js"></script>
     <script src="assets/bbs.js"></script>
   </head>
   <body>
     <div id="container">
       <div id="header">
         <h1>けいじばん</h1>
+        <button type="button" id="user_info" onClick="username()"></button>
       </div>
       <div id="contents">
         <ul>
