--- a/layout/header.html
+++ b/layout/header.html
@@ -13,7 +13,7 @@ Content-Type:text/html
     <div id="container">
       <div id="header">
         <h1>けいじばん</h1>
-        <button type="button" id="user_info" onClick="username()"></button>
+        <button type="button" id="user_info" onClick="change_name()"></button>
       </div>
       <div id="contents">
         <ul>
