--- a/layout/header.html
+++ b/layout/header.html
@@ -4,6 +4,7 @@ Content-Type:text/html
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
     <title>けいじばん</title>
     <link rel="stylesheet" href="assets/style.css">
     <script src="assets/cookie.js"></script>
